--- a/sr2/CMakeLists.txt
+++ b/sr2/CMakeLists.txt
@@ -20,6 +20,7 @@ file(GLOB_RECURSE SAMPLE_HDRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.hpp")
 file(GLOB_RECURSE SAMPLE_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
 
 add_executable(${TARGET_NAME} ${SAMPLE_HDRS} ${SAMPLE_SRCS})
+target_link_libraries(${TARGET_NAME} PRIVATE sqlite3)
 target_include_directories(${TARGET_NAME} PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
 )
