--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ include(target_destination)
 include(source_downloader)
 
 add_subdirectory("third_party/sqlite3")
+add_subdirectory("third_party/cmake")
 
 # Inclua subprojetos.
-add_subdirectory ("sr2")
+add_subdirectory("sr2")
