Moved structures to proper locations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
             "request": "launch",
             "name": "Linux Debug",
             "program": "${workspaceFolder}/Linux/Debug/bin/sr2",
+            "cwd": "${workspaceFolder}/Linux/Debug/bin",
             "args": ["--test1"],
         }
     ],
